--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
+
+@import 
+url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+
 body {
-  font-family: sans-serif;
+  font-family: 'Roboto Slab', serif;
   color: #172b4d;
-  background-color: #0279bf;
+  background-color: bisque;
   display: flex;
   align-items: start;
 }
 
 div {
-  border-radius: 3px;
+  border-radius: 5px;
 }
 
 #main {
@@ -17,6 +21,7 @@ div {
 
 .title {
   font-weight: 600;
+  
 }
 
 .editable {
@@ -42,6 +47,7 @@ div {
 .card {
   background: white;
   border-bottom: 1px solid #aaa;
+  border-radius: 10px;
 }
 
 .list {
@@ -50,6 +56,8 @@ div {
   margin: 10px 5px;
   position: relative;
   background: #dfe1e6;
+  box-shadow: 0px 0px 8px 8px rgba(10, 0, 0, 0.6);
+  
 }
 
 
@@ -58,7 +66,8 @@ div {
   margin: 10px 5px;
   position: relative;
   background: rgba(0,0,0,.12);
-  color: hsla(0,0%,100%,.8);
+  color: hsla(0,0%,0%,.8);
+  
 }
 
 .ghost {
@@ -74,6 +83,7 @@ div {
   margin-top: 0px;
   color: gray;
   text-decoration: none;
+  
 /*   border-bottom: 1px solid #dfe1e6; */
 }
 
