--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ div {
   
 }
 
+i{
+  font-size: 55px;
+  text-shadow: 2px 2px 20px #ECF0F1;
+  margin-top: 10px;
+}
+
 .editable {
   user-select: none;
   outline: none;
@@ -55,6 +61,7 @@ div {
   min-width: 280px;
   margin: 10px 5px;
   position: relative;
+  text-align: center;
   background: #dfe1e6;
   box-shadow: 0px 0px 8px 8px rgba(10, 0, 0, 0.6);
   
